// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: RegisterPage happy path render 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    title="Set Password"
  >
    <Panel.Section>
      <p>
        <small>
          jose@zamora.io
           invited you to join their SparkPost account.
        </small>
      </p>
      <Connect(ReduxForm)
        email="appteam@sparkpost.com"
        onSubmit={[Function]}
      />
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`Page: RegisterPage loading 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    title="Set Password"
  >
    <PanelLoading
      minHeight="400px"
    />
  </Panel>
  <Panel.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;

exports[`Page: RegisterPage no token 1`] = `
<Redirect
  push={false}
  to="/auth"
/>
`;

exports[`Page: RegisterPage token expired 1`] = `
<div>
  <CenteredLogo />
  <Panel
    accent={true}
    title="Set Password"
  >
    <Panel.Section>
      <p>
        This invite has expired, please ask your account administrator to re-send your invitation
      </p>
    </Panel.Section>
  </Panel>
  <Panel.Footer
    left={
      <small>
        <PageLink
          to="/auth"
        >
          Already signed up?
        </PageLink>
      </small>
    }
  />
</div>
`;
